option(ENABLE_TEST_NSL "Enable NSL Tests" ON)

if(ENABLE_TEST_NSL)
    add_subdirectory(baseline)
    add_subdirectory(dft)
    add_subdirectory(diff)
    add_subdirectory(filter)
    add_subdirectory(fit)
    add_subdirectory(geom)
    add_subdirectory(int)
    add_subdirectory(math)
    add_subdirectory(peak)
    add_subdirectory(sf)
    add_subdirectory(smooth)
    add_subdirectory(statistics)
endif()
